# agent

./: .gitignore  README.md  pptagent.ipynb  pyproject.toml
prompts/: outline_prompt.txt
src/ppt_agent/: __init__.py  agent.py  cli.py  config.py  gemini_client.py  models.py  prompts.py  renderer.py
tests/: test_models.py  test_renderer.py
